--- a/singolo1.html
+++ b/singolo1.html
@@ -4,26 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Singolo</title>
-
+    <link rel="stylesheet" href="singolo1.css">
 </head>
 
 <body>
     <header class="header">
-        <div class="wrapper">
-            <h1>Singolo<span>*</span></h1>
+        <div class="container">
+            <h1 class="logo">Singolo<span class="asterisk">*</span></h1>
             <nav class="header-navigation">
-                <ul class="navigaton">
-                    <li>Home</li>
-                    <li>Services</li>
-                    <li>Portfolio</li>
-                    <li>About</li>
-                    <li>Contact</li>
+                <ul class="navigation">
+                    <li class="navigation-menu">Home</li>
+                    <li class="navigation-menu">Services</li>
+                    <li class="navigation-menu">Portfolio</li>
+                    <li class="navigation-menu">About</li>
+                    <li class="navigation-menu">Contact</li>
                 </ul>
             </nav>
         </div>
 
     </header>
-    <main>
+    <hr class="line-bottom header-bottom">
+    <main class="slider">
         <div class="wrapper">
             <button class="button rewind-left">Left</button>
             <div class="phone">
@@ -35,6 +36,7 @@
             <button class="button rewind-right">Right</button>
         </div>
     </main>
+    <hr class="line-bottom main-bottom">
     <footer>
         <div class="service-information">
             <h2 id="service-header">Our services</h1>
