feat: add slider and seervices

--- a/singolo1.html
+++ b/singolo1.html
@@ -37,7 +37,7 @@
         </div>
     </main>
     <hr class="line-bottom main-bottom">
-    <footer>
+    <footer class="services">
         <div class="service-information">
             <h2 id="service-header">Our services</h1>
                 <p id="service-content">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimen.
