--- a/singolo1.html
+++ b/singolo1.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Singolo</title>
     <link rel="stylesheet" href="singolo1.css">
+    <link rel="stylesheet" href="fonts.css">
 </head>
 
 <body>
