feat: add service style and correct

--- a/singolo1.html
+++ b/singolo1.html
@@ -26,8 +26,8 @@
     </header>
     <hr class="line-bottom header-bottom">
     <main class="slider">
-        <div class="arrow-left">
-            <img src="./assets/image/arrow-left.png" alt="Left"/>
+        <div class="arrow arrow-left">
+            <img src="./assets/image/arrow-left.svg" alt="Left"/>
         </div>
         <div class="phone vertical">
             <img src="./assets/image/phone-vertical.png" alt="Phone vertical"/>
@@ -35,16 +35,16 @@
         <div class="phone horisontal">
             <img src="./assets/image/phone-horisontal.png" alt="phone-horisontal" />
         </div>
-        <div class="arrow-right">
-            <img src="./assets/image/arrow-right.png" alt="Right" />
+        <div class="arrow arrow-right">
+            <img src="./assets/image/arrow-right.svg" alt="Right" />
         </div>
     </main>
     <hr class="line-bottom main-bottom">
     <section class="services">
         <div class="service-information">
             <h2 class="gray" id="service-header">our services</h2>
-            <p class="light-gray" id="service-content">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimen.
-               Duis mollis non commodo luctus nisi errat porttitor ligula,
+            <p class="light-gray" id="service-content">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
+               Duis mollis non commodo luctus nisi erat porttitor ligula,
                eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus
                commodo, tortor mauris condimentum nibh.
             </p>
