feat: singolo1 add phone image

--- a/singolo1.html
+++ b/singolo1.html
@@ -14,7 +14,7 @@
             <h1 class="logo">Singolo<span class="red">*</span></h1>
             <nav class="header-navigation">
                 <ul class="navigation">
-                    <li class="navigation-menu red">Home</li>
+                    <li class="navigation-menu">Home</li>
                     <li class="navigation-menu">Services</li>
                     <li class="navigation-menu">Portfolio</li>
                     <li class="navigation-menu">About</li>
@@ -29,11 +29,19 @@
         <div class="arrow arrow-left">
             <img src="./assets/image/arrow-left.svg" alt="Left"/>
         </div>
-        <div class="phone vertical">
-            <img src="./assets/image/phone-vertical.png" alt="Phone vertical"/>
+        <div class="phone">
+                <img class="shadow" src="./assets/image/shadow.png" />
+                <img class="base" src="./assets/image/phone.png" height="458" width="215" alt="Phone vertical" />
+                <div class="screen screen-vertical">
+                    <img src="./assets/image/screen1.png" />
+                </div>
         </div>
-        <div class="phone horisontal">
-            <img src="./assets/image/phone-horisontal.png" alt="phone-horisontal" />
+        <div class="phone rotate-90-degree">
+            <img class="shadow rotateY-180-degree" src="./assets/image/shadow.png" />
+            <img class="base horizontal" src="./assets/image/phone.png" height="458" width="215" alt="Phone horizontal" />
+            <div class="screen screen-horizontal">
+                <img src="./assets/image/screen2.png" />
+            </div>
         </div>
         <div class="arrow arrow-right">
             <img src="./assets/image/arrow-right.svg" alt="Right" />
