feat: add slider alignment

--- a/singolo1.html
+++ b/singolo1.html
@@ -29,14 +29,14 @@
         <div class="arrow arrow-left">
             <img src="./assets/image/arrow-left.svg" alt="Left"/>
         </div>
-        <div class="phone">
+        <div class="phone phone-vertical">
                 <img class="shadow" src="./assets/image/shadow.png" />
                 <img class="base" src="./assets/image/phone.png" height="458" width="215" alt="Phone vertical" />
                 <div class="screen screen-vertical">
                     <img src="./assets/image/screen1.png" />
                 </div>
         </div>
-        <div class="phone rotate-90-degree">
+        <div class="phone phone-horizontal rotate-90-degree">
             <img class="shadow rotateY-180-degree" src="./assets/image/shadow.png" />
             <img class="base horizontal" src="./assets/image/phone.png" height="458" width="215" alt="Phone horizontal" />
             <div class="screen screen-horizontal">
