--- a/singolo1.html
+++ b/singolo1.html
@@ -60,7 +60,7 @@
         <div class="layout-3-column">
             <div class="service-menu" id="custom-design">
                 <div class="service__icon">
-                    <span class="icon__ring"></span>
+                    <img src="./assets/image/pen.svg">
                 </div>
                 <h4 class="gray">Custom design</h4>
                 <p class="light-gray">Curabitur vestibulum eget mauris quis laoreet.
@@ -69,7 +69,7 @@
             </div>
             <div class="service-menu" id="inovative-ideas">
                 <div class="service__icon">
-                    <span class="icon__ring"></span>
+                    <img src="./assets/image/bulb.svg">
                 </div>
                 <h4  class="gray">Inovative ideas</h4>
                 <p class="light-gray">Quisque luctus, quam eget molestie commodo, lacus purus cursus 
@@ -78,7 +78,7 @@
             </div>
             <div class="service-menu" id="love-is-answer">
                 <div class="service__icon">
-                    <span class="icon__ring"></span>
+                    <img src="./assets/image/heart.svg">
                 </div>
                 <h4 class="gray">Love is the answer</h4>
                 <p class="light-gray">Nulla sed nunc et tortor luctus faucibus. Morbi at 
@@ -87,7 +87,7 @@
             </div>
             <div class="service-menu" id="responsive-layout">
                 <div class="service__icon">
-                    <span class="icon__ring"></span>
+                    <img src="./assets/image/phone.svg">
                 </div>
                 <h4 class="gray">Responsive Layout</h4>
                 <p class="light-gray">Sed porttitor placerat rhoncus. In at nunc tellus. 
@@ -96,7 +96,7 @@
             </div>
             <div class="service-menu" id="support">
                 <div class="service__icon">
-                    <span class="icon__ring"></span>
+                    <img src="./assets/image/bubble.svg">
                 </div>
                 <h4 class="gray">24 / 7 Support</h4>
                 <p class="light-gray">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. 
@@ -105,7 +105,7 @@
             </div>
             <div class="service-menu" id="feel-like-star">
                 <div class="service__icon">
-                    <span class="icon__ring"></span>
+                    <img src="./assets/image/star.svg">
                 </div>
                 <h4 class="gray">Feel Like A Star</h4>
                 <p class="light-gray">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh.
