--- a/singolo1.html
+++ b/singolo1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Singolo</title>
+    <title>singolo</title>
     <link rel="stylesheet" href="singolo1.css">
     <link rel="stylesheet" href="fonts.css">
 </head>
@@ -14,11 +14,11 @@
             <h1 class="logo">Singolo<span class="red">*</span></h1>
             <nav class="header-navigation">
                 <ul class="navigation">
-                    <li class="navigation-menu">Home</li>
-                    <li class="navigation-menu">Services</li>
-                    <li class="navigation-menu">Portfolio</li>
-                    <li class="navigation-menu">About</li>
-                    <li class="navigation-menu">Contact</li>
+                    <li class="navigation-menu home">home</li>
+                    <li class="navigation-menu">services</li>
+                    <li class="navigation-menu">portfolio</li>
+                    <li class="navigation-menu">about</li>
+                    <li class="navigation-menu">contact</li>
                 </ul>
             </nav>
         </div>
@@ -27,87 +27,88 @@
     <hr class="line-bottom header-bottom">
     <main class="slider">
         <div class="arrow arrow-left">
-            <img src="./assets/image/arrow-left.svg" alt="Left"/>
+            <img src="./assets/image/arrow-left.svg" alt="Left">
         </div>
         <div class="phone phone-vertical">
-                <img class="shadow" src="./assets/image/shadow.png" />
-                <img class="base" src="./assets/image/phone.png" height="458" width="215" alt="Phone vertical" />
-                <div class="screen screen-vertical">
-                    <img src="./assets/image/screen1.png" />
-                </div>
+            <img class="shadow" src="./assets/image/shadow.png" alt="Shadow">
+            <img class="base" src="./assets/image/phone.png" height="458" width="215" alt="Phone vertical">
+            <div class="screen screen-vertical">
+                <img src="./assets/image/screen1.png" alt="Background">
+            </div>
         </div>
         <div class="phone phone-horizontal rotate-90-degree">
-            <img class="shadow rotateY-180-degree" src="./assets/image/shadow.png" />
-            <img class="base horizontal" src="./assets/image/phone.png" height="458" width="215" alt="Phone horizontal" />
+            <img class="shadow rotateY-180-degree" src="./assets/image/shadow.png" alt="Shadow" />
+            <img class="base horizontal" src="./assets/image/phone.png" height="458" width="215" alt="Phone horizontal">
             <div class="screen screen-horizontal">
-                <img src="./assets/image/screen2.png" />
+                <img src="./assets/image/screen2.png" alt="Background">
             </div>
         </div>
         <div class="arrow arrow-right">
-            <img src="./assets/image/arrow-right.svg" alt="Right" />
+            <img src="./assets/image/arrow-right.svg" alt="Right">
         </div>
     </main>
     <hr class="line-bottom main-bottom">
     <section class="services">
         <div class="service-information">
             <h2 class="gray" id="service-header">our services</h2>
-            <p class="light-gray" id="service-content">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
-               Duis mollis non commodo luctus nisi erat porttitor ligula,
-               eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus
-               commodo, tortor mauris condimentum nibh.
+            <p class="light-gray" id="service-content">Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum.
+                Duis mollis non commodo luctus nisi erat porttitor ligula,
+                eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus
+                commodo, tortor mauris condimentum nibh.
             </p>
         </div>
         <div class="layout-3-column">
             <div class="service-menu" id="custom-design">
                 <div class="service__icon">
-                    <img src="./assets/image/pen.svg">
+                    <img src="./assets/image/pen.svg" alt="Pen">
                 </div>
-                <h4 class="gray">Custom design</h4>
+                <h4 class="gray">custom design</h4>
                 <p class="light-gray">Curabitur vestibulum eget mauris quis laoreet.
                     Phasellus in quam laoreet, viverra lacus ut, ultrices velit.
                 </p>
             </div>
             <div class="service-menu" id="inovative-ideas">
                 <div class="service__icon">
-                    <img src="./assets/image/bulb.svg">
+                    <img src="./assets/image/bulb.svg" alt="Bulb">
                 </div>
-                <h4  class="gray">Inovative ideas</h4>
-                <p class="light-gray">Quisque luctus, quam eget molestie commodo, lacus purus cursus 
+                <h4 class="gray">inovative ideas</h4>
+                <p class="light-gray">Quisque luctus, quam eget molestie commodo, lacus purus cursus
                     purus, nec rutrum tellus dolor id lorem.
                 </p>
             </div>
             <div class="service-menu" id="love-is-answer">
                 <div class="service__icon">
-                    <img src="./assets/image/heart.svg">
+                    <img src="./assets/image/heart.svg" alt="Heart">
                 </div>
-                <h4 class="gray">Love is the answer</h4>
-                <p class="light-gray">Nulla sed nunc et tortor luctus faucibus. Morbi at 
+                <h4 class="gray">love is the answer</h4>
+                <p class="light-gray">Nulla sed nunc et tortor luctus faucibus. Morbi at
                     aliquet turpis, et consequat felis. Quisque condimentum.
                 </p>
             </div>
             <div class="service-menu" id="responsive-layout">
                 <div class="service__icon">
-                    <img src="./assets/image/phone.svg">
+                    <img src="./assets/image/phone.svg" alt="Phone">
                 </div>
-                <h4 class="gray">Responsive Layout</h4>
-                <p class="light-gray">Sed porttitor placerat rhoncus. In at nunc tellus. 
+                <h4 class="gray">responsive Layout</h4>
+                <p class="light-gray">Sed porttitor placerat rhoncus. In at nunc tellus.
                     Maecenas blandit nunc ligula. Praesent elit leo.
                 </p>
             </div>
             <div class="service-menu" id="support">
                 <div class="service__icon">
-                    <img src="./assets/image/bubble.svg">
+                    <img src="./assets/image/bubble.svg" alt="Bubble">
                 </div>
-                <h4 class="gray">24 / 7 Support</h4>
-                <p class="light-gray">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. 
+                <h4 class="gray">24 / 7 support</h4>
+                <p class="light-gray">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi.
                     Nulla a sem erat. Pellentesque egestas venenatis lorem.
                 </p>
             </div>
             <div class="service-menu" id="feel-like-star">
                 <div class="service__icon">
-                    <img src="./assets/image/star.svg">
+                    <img src="./assets/image/star.svg" alt="Star">
                 </div>
-                <h4 class="gray">Feel Like A Star</h4>
+                <h4 class="gray">feel like a star</h4>
                 <p class="light-gray">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh.
                     Fusce vitae aliquam tellus.
                 </p>
