feat: fix sizes and margins

--- a/singolo1.html
+++ b/singolo1.html
@@ -14,11 +14,11 @@
             <h1 class="logo">Singolo<span class="red">*</span></h1>
             <nav class="header-navigation">
                 <ul class="navigation">
-                    <li class="navigation-menu home">home</li>
-                    <li class="navigation-menu">services</li>
-                    <li class="navigation-menu">portfolio</li>
-                    <li class="navigation-menu">about</li>
-                    <li class="navigation-menu">contact</li>
+                    <li class="navigation-menu home" id="home">home</li>
+                    <li class="navigation-menu" id="services">services</li>
+                    <li class="navigation-menu" id="portfolio">portfolio</li>
+                    <li class="navigation-menu" id="about">about</li>
+                    <li class="navigation-menu" id="contact">contact</li>
                 </ul>
             </nav>
         </div>
@@ -53,7 +53,7 @@
             <h2 class="gray" id="service-header">our services</h2>
             <p class="light-gray" id="service-content">Fusce dapibus, tellus ac cursus commodo, tortor mauris
                 condimentum.
-                Duis mollis non commodo luctus nisi erat porttitor ligula,
+                Duis mollis, non commodo luctus, nisi erat porttitor ligula,
                 eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus
                 commodo, tortor mauris condimentum nibh.
             </p>
@@ -115,6 +115,7 @@
             </div>
         </div>
     </section>
+    <hr class="line-bottom service-bottom">
 </body>
 
 </html>
