--- a/singolo1.html
+++ b/singolo1.html
@@ -14,7 +14,7 @@
             <h1 class="logo">Singolo<span class="red">*</span></h1>
             <nav class="header-navigation">
                 <ul class="navigation">
-                    <li class="navigation-menu home" id="home">home</li>
+                    <li class="navigation-menu home red" id="home">home</li>
                     <li class="navigation-menu" id="services">services</li>
                     <li class="navigation-menu" id="portfolio">portfolio</li>
                     <li class="navigation-menu" id="about">about</li>
@@ -27,24 +27,25 @@
     <hr class="line-bottom header-bottom">
     <main class="slider">
         <div class="arrow arrow-left">
-            <img src="./assets/image/arrow-left.svg" alt="Left">
+            <img src="./assets/image/arrow-left.svg" width="16" height="27" alt="Left">
         </div>
         <div class="phone phone-vertical">
-            <img class="shadow" src="./assets/image/shadow.png" alt="Shadow">
-            <img class="base" src="./assets/image/phone.png" height="458" width="215" alt="Phone vertical">
+            <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
+            <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
             <div class="screen screen-vertical">
-                <img src="./assets/image/screen1.png" alt="Background">
+                <img src="./assets/image/screen1.png" width="580" height="580" alt="Background">
             </div>
         </div>
         <div class="phone phone-horizontal rotate-90-degree">
-            <img class="shadow rotateY-180-degree" src="./assets/image/shadow.png" alt="Shadow" />
-            <img class="base horizontal" src="./assets/image/phone.png" height="458" width="215" alt="Phone horizontal">
+            <img class="shadow rotateY-180-degree" src="./assets/image/shadow.png" width="240" height="483"
+                alt="Shadow">
+            <img class="base horizontal" src="./assets/image/phone.png" width="215" height="458" alt="Phone horizontal">
             <div class="screen screen-horizontal">
-                <img src="./assets/image/screen2.png" alt="Background">
+                <img src="./assets/image/screen2.png" width="580" height="580" alt="Background">
             </div>
         </div>
         <div class="arrow arrow-right">
-            <img src="./assets/image/arrow-right.svg" alt="Right">
+            <img src="./assets/image/arrow-right.svg" width="16" height="27" alt="Right">
         </div>
     </main>
     <hr class="line-bottom main-bottom">
@@ -61,7 +62,7 @@
         <div class="layout-3-column">
             <div class="service-menu" id="custom-design">
                 <div class="service__icon">
-                    <img src="./assets/image/pen.svg" alt="Pen">
+                    <img src="./assets/image/pen.svg" width="35" height="35" alt="Pen">
                 </div>
                 <h4 class="gray">custom design</h4>
                 <p class="light-gray">Curabitur vestibulum eget mauris quis laoreet.
@@ -70,7 +71,7 @@
             </div>
             <div class="service-menu" id="inovative-ideas">
                 <div class="service__icon">
-                    <img src="./assets/image/bulb.svg" alt="Bulb">
+                    <img src="./assets/image/bulb.svg" width="26" height="35" alt="Bulb">
                 </div>
                 <h4 class="gray">inovative ideas</h4>
                 <p class="light-gray">Quisque luctus, quam eget molestie commodo, lacus purus cursus
@@ -79,7 +80,7 @@
             </div>
             <div class="service-menu" id="love-is-answer">
                 <div class="service__icon">
-                    <img src="./assets/image/heart.svg" alt="Heart">
+                    <img src="./assets/image/heart.svg" width="36" height="32" alt="Heart">
                 </div>
                 <h4 class="gray">love is the answer</h4>
                 <p class="light-gray">Nulla sed nunc et tortor luctus faucibus. Morbi at
@@ -88,7 +89,7 @@
             </div>
             <div class="service-menu" id="responsive-layout">
                 <div class="service__icon">
-                    <img src="./assets/image/phone.svg" alt="Phone">
+                    <img src="./assets/image/phone.svg" width="26" height="36" alt="Phone">
                 </div>
                 <h4 class="gray">responsive Layout</h4>
                 <p class="light-gray">Sed porttitor placerat rhoncus. In at nunc tellus.
@@ -97,7 +98,7 @@
             </div>
             <div class="service-menu" id="support">
                 <div class="service__icon">
-                    <img src="./assets/image/bubble.svg" alt="Bubble">
+                    <img src="./assets/image/bubble.svg" width="35" height="31" alt="Bubble">
                 </div>
                 <h4 class="gray">24 / 7 support</h4>
                 <p class="light-gray">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi.
@@ -106,7 +107,7 @@
             </div>
             <div class="service-menu" id="feel-like-star">
                 <div class="service__icon">
-                    <img src="./assets/image/star.svg" alt="Star">
+                    <img src="./assets/image/star.svg" width="36" height="34" alt="Star">
                 </div>
                 <h4 class="gray">feel like a star</h4>
                 <p class="light-gray">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh.
