feat: add about us images

--- a/singolo2.html
+++ b/singolo2.html
@@ -24,18 +24,18 @@
     </header>
     <section class="gallery">
         <div class="layout-4-columns">
-            <img src="./assets/image/01.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/02.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/03.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/04.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/05.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/06.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/07.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/08.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/09.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/10.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/11.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/12.png" width="auto" height="auto" alt="Image">
+            <img src="./assets/image/portfolio/gallery/01.png" width="auto" height="auto" alt="Image">
+            <img src="./assets/image/portfolio/gallery/02.png" width="auto" height="auto" alt="Image">
+            <img src="./assets/image/portfolio/gallery/03.png" width="auto" height="auto" alt="Image">
+            <img src="./assets/image/portfolio/gallery/04.png" width="auto" height="auto" alt="Image">
+            <img src="./assets/image/portfolio/gallery/05.png" width="auto" height="auto" alt="Image">
+            <img src="./assets/image/portfolio/gallery/06.png" width="auto" height="auto" alt="Image">
+            <img src="./assets/image/portfolio/gallery/07.png" width="auto" height="auto" alt="Image">
+            <img src="./assets/image/portfolio/gallery/08.png" width="auto" height="auto" alt="Image">
+            <img src="./assets/image/portfolio/gallery/09.png" width="auto" height="auto" alt="Image">
+            <img src="./assets/image/portfolio/gallery/10.png" width="auto" height="auto" alt="Image">
+            <img src="./assets/image/portfolio/gallery/11.png" width="auto" height="auto" alt="Image">
+            <img src="./assets/image/portfolio/gallery/12.png" width="auto" height="auto" alt="Image">
         </div>
     </section>
     <section class="about-us">
@@ -45,6 +45,11 @@
                 Duis mollis, non commodo luctus, nisi erat porttitor ligula,
                 eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus
                 commodo, tortor mauris condimentum nibh.</p>
+        </div>
+        <div class="layout-3-columns">
+            <img src="./assets/image/portfolio/about-us/adam-jensen.png" width="auto" height="auto" alt="Adam Jensen">
+            <img src="./assets/image/portfolio/about-us/desmond-miles.png" width="auto" height="auto" alt="Desmond Miles">
+            <img src="./assets/image/portfolio/about-us/scolara-visari.png" width="auto" height="auto" alt="Scolara Visari">
         </div>
     </section>
 </body>
