feat: add icons and portrait position

--- a/singolo2.html
+++ b/singolo2.html
@@ -11,7 +11,8 @@
     <header class="header">
         <div class="logo">
             <h1 class="logo-name">portfolio</h1>
-            <p class="header-text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+            <p class="header-text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio
+                sem nec elit.</p>
         </div>
         <div class="container-menu">
             <ul class="menu">
@@ -47,9 +48,42 @@
                 commodo, tortor mauris condimentum nibh.</p>
         </div>
         <div class="layout-3-columns">
-            <img src="./assets/image/portfolio/about-us/adam-jensen.png" width="auto" height="auto" alt="Adam Jensen">
-            <img src="./assets/image/portfolio/about-us/desmond-miles.png" width="auto" height="auto" alt="Desmond Miles">
-            <img src="./assets/image/portfolio/about-us/scolara-visari.png" width="auto" height="auto" alt="Scolara Visari">
+            <div class="about-us-info">
+                <img class="portrait" src="./assets/image/portfolio/about-us/adam-jensen.png" width="auto" height="auto"
+                    alt="Adam Jensen">
+                <h2 class="info-name">adam jensen</h2>
+                <p class="info-text"></p>
+                <div class="info-contact">
+                    <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="32" height="32" alt="Facebook">
+                    <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="32" height="32" alt="Google+">
+                    <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="32" height="32" alt="Twitter">
+                    <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="32" height="32" alt="LinkedIn">
+                </div>
+            </div>
+            <div class="about-us-info">
+                <img class="portrait" src="./assets/image/portfolio/about-us/desmond-miles.png" width="auto" height="auto"
+                    alt="Desmond Miles">
+                <h2 class="info-name">desmond miles</h2>
+                <p class="info-text"></p>
+                <div class="info-contact">
+                    <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="32" height="32" alt="Facebook">
+                    <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="32" height="32" alt="Google+">
+                    <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="32" height="32" alt="Twitter">
+                    <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="32" height="32" alt="LinkedIn">
+                </div>
+            </div>
+            <div class="about-us-info">
+                <img class="portrait" src="./assets/image/portfolio/about-us/scolara-visari.png" width="auto" height="auto"
+                    alt="Scolara Visari">
+                <h2 class="info-name">scolara visari</h2>
+                <p class="info-text"></p>
+                <div class="info-contact">
+                    <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="32" height="32" alt="Facebook">
+                    <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="32" height="32" alt="Google+">
+                    <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="32" height="32" alt="Twitter">
+                    <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="32" height="32" alt="LinkedIn">
+                </div>
+            </div>
         </div>
     </section>
 </body>
