feat: add about us ctyle

--- a/singolo2.html
+++ b/singolo2.html
@@ -51,8 +51,9 @@
             <div class="about-us-info">
                 <img class="portrait" src="./assets/image/portfolio/about-us/adam-jensen.png" width="auto" height="auto"
                     alt="Adam Jensen">
-                <h2 class="info-name">adam jensen</h2>
-                <p class="info-text"></p>
+                <h3 class="info-name">adam jensen</h3>
+                <p class="info-text">Quisque luctus, quam eget molestie commodo, lacus purus cursus
+                    purus, nec rutrum tellus dolor id lorem.</p>
                 <div class="info-contact">
                     <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="32" height="32" alt="Facebook">
                     <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="32" height="32" alt="Google+">
@@ -63,8 +64,9 @@
             <div class="about-us-info">
                 <img class="portrait" src="./assets/image/portfolio/about-us/desmond-miles.png" width="auto" height="auto"
                     alt="Desmond Miles">
-                <h2 class="info-name">desmond miles</h2>
-                <p class="info-text"></p>
+                <h3 class="info-name">desmond miles</h3>
+                <p class="info-text">Curabitur vestibulum eget mauris quis laoreet.
+                    Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
                 <div class="info-contact">
                     <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="32" height="32" alt="Facebook">
                     <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="32" height="32" alt="Google+">
@@ -75,8 +77,9 @@
             <div class="about-us-info">
                 <img class="portrait" src="./assets/image/portfolio/about-us/scolara-visari.png" width="auto" height="auto"
                     alt="Scolara Visari">
-                <h2 class="info-name">scolara visari</h2>
-                <p class="info-text"></p>
+                <h3 class="info-name">scolara visari</h3>
+                <p class="info-text">Nulla sed nunc et tortor luctus faucibus. Morbi at
+                    aliquet turpis, et consequat felis. Quisque condimentum.</p>
                 <div class="info-contact">
                     <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="32" height="32" alt="Facebook">
                     <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="32" height="32" alt="Google+">
