fix: change social network icons

--- a/singolo2.html
+++ b/singolo2.html
@@ -55,36 +55,73 @@
                 <p class="info-text">Quisque luctus, quam eget molestie commodo, lacus purus cursus
                     purus, nec rutrum tellus dolor id lorem.</p>
                 <div class="info-contact">
-                    <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="15" height="15" alt="Facebook">
-                    <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="32" height="32" alt="Google+">
-                    <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="32" height="32" alt="Twitter">
-                    <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="32" height="32" alt="LinkedIn">
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="10" height="10"
+                            alt="Facebook">
+                    </button>
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="10" height="10"
+                            alt="Google+">
+                    </button>
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="10" height="10"
+                            alt="Twitter">
+                    </button>
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="10" height="10"
+                            alt="LinkedIn">
+                    </button>
                 </div>
             </div>
             <div class="about-us-info">
-                <img class="portrait" src="./assets/image/portfolio/about-us/desmond-miles.png" width="auto" height="auto"
-                    alt="Desmond Miles">
+                <img class="portrait" src="./assets/image/portfolio/about-us/desmond-miles.png" width="auto"
+                    height="auto" alt="Desmond Miles">
                 <h3 class="info-name">desmond miles</h3>
                 <p class="info-text">Curabitur vestibulum eget mauris quis laoreet.
                     Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
                 <div class="info-contact">
-                    <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="32" height="32" alt="Facebook">
-                    <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="32" height="32" alt="Google+">
-                    <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="32" height="32" alt="Twitter">
-                    <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="32" height="32" alt="LinkedIn">
+
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="32" height="32"
+                            alt="Facebook">
+                    </button>
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="32" height="32"
+                            alt="Google+">
+                    </button>
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="32" height="32"
+                            alt="Twitter">
+                    </button>
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="32" height="32"
+                            alt="LinkedIn">
+                    </button>
                 </div>
             </div>
             <div class="about-us-info">
-                <img class="portrait" src="./assets/image/portfolio/about-us/scolara-visari.png" width="auto" height="auto"
-                    alt="Scolara Visari">
+                <img class="portrait" src="./assets/image/portfolio/about-us/scolara-visari.png" width="auto"
+                    height="auto" alt="Scolara Visari">
                 <h3 class="info-name">scolara visari</h3>
                 <p class="info-text">Nulla sed nunc et tortor luctus faucibus. Morbi at
                     aliquet turpis, et consequat felis. Quisque condimentum.</p>
                 <div class="info-contact">
-                    <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="32" height="32" alt="Facebook">
-                    <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="32" height="32" alt="Google+">
-                    <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="32" height="32" alt="Twitter">
-                    <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="32" height="32" alt="LinkedIn">
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="32" height="32"
+                            alt="Facebook">
+                    </button>
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="32" height="32"
+                            alt="Google+">
+                    </button>
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="32" height="32"
+                            alt="Twitter">
+                    </button>
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="32" height="32"
+                            alt="LinkedIn">
+                    </button>
                 </div>
             </div>
         </div>
