--- a/singolo2.html
+++ b/singolo2.html
@@ -25,18 +25,42 @@
     </header>
     <section class="gallery">
         <div class="layout-4-columns">
-            <img src="./assets/image/portfolio/gallery/01.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/portfolio/gallery/02.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/portfolio/gallery/03.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/portfolio/gallery/04.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/portfolio/gallery/05.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/portfolio/gallery/06.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/portfolio/gallery/07.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/portfolio/gallery/08.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/portfolio/gallery/09.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/portfolio/gallery/10.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/portfolio/gallery/11.png" width="auto" height="auto" alt="Image">
-            <img src="./assets/image/portfolio/gallery/12.png" width="auto" height="auto" alt="Image">
+            <div class="gallery-image">
+                <img src="./assets/image/portfolio/gallery/01.png" width="auto" height="auto" alt="Image">
+            </div>
+            <div class="gallery-image">
+                <img src="./assets/image/portfolio/gallery/02.png" width="auto" height="auto" alt="Image">
+            </div>
+            <div class="gallery-image">
+                <img src="./assets/image/portfolio/gallery/03.png" width="auto" height="auto" alt="Image">
+            </div>
+            <div class="gallery-image">
+                <img src="./assets/image/portfolio/gallery/04.png" width="auto" height="auto" alt="Image">
+            </div>
+            <div class="gallery-image">
+                <img src="./assets/image/portfolio/gallery/05.png" width="auto" height="auto" alt="Image">
+            </div>
+            <div class="gallery-image">
+                <img src="./assets/image/portfolio/gallery/06.png" width="auto" height="auto" alt="Image">
+            </div>
+            <div class="gallery-image">
+                <img src="./assets/image/portfolio/gallery/07.png" width="auto" height="auto" alt="Image">
+            </div>
+            <div class="gallery-image">
+                <img src="./assets/image/portfolio/gallery/08.png" width="auto" height="auto" alt="Image">
+            </div>
+            <div class="gallery-image">
+                <img src="./assets/image/portfolio/gallery/09.png" width="auto" height="auto" alt="Image">
+            </div>
+            <div class="gallery-image">
+                <img src="./assets/image/portfolio/gallery/10.png" width="auto" height="auto" alt="Image">
+            </div>
+            <div class="gallery-image">
+                <img src="./assets/image/portfolio/gallery/11.png" width="auto" height="auto" alt="Image">
+            </div>
+            <div class="gallery-image">
+                <img src="./assets/image/portfolio/gallery/12.png" width="auto" height="auto" alt="Image">
+            </div>
         </div>
     </section>
     <section class="about-us">
