--- a/singolo2.html
+++ b/singolo2.html
@@ -73,79 +73,100 @@
         </div>
         <div class="layout-3-columns">
             <div class="about-us-info">
-                <img class="portrait" src="./assets/image/portfolio/about-us/adam-jensen.png" width="auto" height="auto"
-                    alt="Adam Jensen">
+                <img class="portrait" id="adam-jensen" src="./assets/image/portfolio/about-us/adam-jensen.png"
+                    width="auto" height="auto" alt="Adam Jensen">
                 <h3 class="info-name">adam jensen</h3>
                 <p class="info-text">Quisque luctus, quam eget molestie commodo, lacus purus cursus
                     purus, nec rutrum tellus dolor id lorem.</p>
                 <div class="info-contact">
-                    <button class="button-icon">
-                        <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="14" height="14"
-                            alt="Facebook">
-                    </button>
-                    <button class="button-icon">
-                        <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="14" height="14"
-                            alt="Google+">
-                    </button>
-                    <button class="button-icon">
-                        <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="14" height="14"
-                            alt="Twitter">
-                    </button>
-                    <button class="button-icon">
-                        <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="14" height="14"
-                            alt="LinkedIn">
-                    </button>
+                    <form>
+                        <button class="button-icon">
+                            <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="14" height="14"
+                                alt="Facebook">
+                        </button>
+                    </form>
+                    <form>
+                        <button class="button-icon">
+                            <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="14" height="14"
+                                alt="Google+">
+                        </button>
+                    </form>
+                    <form>
+                        <button class="button-icon">
+                            <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="14" height="14"
+                                alt="Twitter">
+                        </button>
+                    </form>
+                    <form>
+                        <button class="button-icon">
+                            <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="14" height="14"
+                                alt="LinkedIn">
+                        </button>
+                    </form>
                 </div>
             </div>
-            <div class="about-us-info">
+            <div class="about-us-info" id="desmond-miles">
                 <img class="portrait" src="./assets/image/portfolio/about-us/desmond-miles.png" width="auto"
                     height="auto" alt="Desmond Miles">
                 <h3 class="info-name">desmond miles</h3>
                 <p class="info-text">Curabitur vestibulum eget mauris quis laoreet.
                     Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
                 <div class="info-contact">
-
-                    <button class="button-icon">
-                        <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="14" height="14"
-                            alt="Facebook">
-                    </button>
-                    <button class="button-icon">
-                        <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="14" height="14"
-                            alt="Google+">
-                    </button>
-                    <button class="button-icon">
-                        <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="14" height="14"
-                            alt="Twitter">
-                    </button>
-                    <button class="button-icon">
-                        <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="14" height="14"
-                            alt="LinkedIn">
-                    </button>
+                        <button class="button-icon">
+                            <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="14" height="14"
+                                alt="Facebook">
+                        </button>
+                    <form>
+                        <button class="button-icon">
+                            <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="14" height="14"
+                                alt="Google+">
+                        </button>
+                    </form>
+                    <form>
+                        <button class="button-icon">
+                            <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="14" height="14"
+                                alt="Twitter">
+                        </button>
+                    </form>
+                    <form>
+                        <button class="button-icon">
+                            <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="14" height="14"
+                                alt="LinkedIn">
+                        </button>
+                    </form>
                 </div>
             </div>
             <div class="about-us-info">
-                <img class="portrait" src="./assets/image/portfolio/about-us/scolara-visari.png" width="auto"
-                    height="auto" alt="Scolara Visari">
+                <img class="portrait" id="scolara-visari" src="./assets/image/portfolio/about-us/scolara-visari.png"
+                    width="auto" height="auto" alt="Scolara Visari">
                 <h3 class="info-name">scolara visari</h3>
                 <p class="info-text">Nulla sed nunc et tortor luctus faucibus. Morbi at
                     aliquet turpis, et consequat felis. Quisque condimentum.</p>
                 <div class="info-contact">
-                    <button class="button-icon">
-                        <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="14" height="14"
-                            alt="Facebook">
-                    </button>
-                    <button class="button-icon">
-                        <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="14" height="14"
-                            alt="Google+">
-                    </button>
-                    <button class="button-icon">
-                        <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="14" height="14"
-                            alt="Twitter">
-                    </button>
-                    <button class="button-icon">
-                        <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="14" height="14"
-                            alt="LinkedIn">
-                    </button>
+                    <form>
+                        <button class="button-icon">
+                            <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="14" height="14"
+                                alt="Facebook">
+                        </button>
+                    </form>
+                    <form>
+                        <button class="button-icon">
+                            <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="14" height="14"
+                                alt="Google+">
+                        </button>
+                    </form>
+                    <form>
+                        <button class="button-icon">
+                            <img class="icon" src="./assets/image/portfolio/icon/twitter.svg" width="14" height="14"
+                                alt="Twitter">
+                        </button>
+                    </form>
+                    <form>
+                        <button class="button-icon">
+                            <img class="icon" src="./assets/image/portfolio/icon/linkedin.svg" width="14" height="14"
+                                alt="LinkedIn">
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
