--- a/singolo2.html
+++ b/singolo2.html
@@ -26,40 +26,40 @@
     <section class="gallery">
         <div class="layout-4-columns">
             <div class="gallery-image">
-                <img src="./assets/image/portfolio/gallery/01.png" width="auto" height="auto" alt="Image">
+                <img id="image01" src="./assets/image/portfolio/gallery/01.png" width="auto" height="auto" alt="Image">
             </div>
             <div class="gallery-image">
-                <img src="./assets/image/portfolio/gallery/02.png" width="auto" height="auto" alt="Image">
+                <img id="image02" src="./assets/image/portfolio/gallery/02.png" width="auto" height="auto" alt="Image">
             </div>
             <div class="gallery-image">
-                <img src="./assets/image/portfolio/gallery/03.png" width="auto" height="auto" alt="Image">
+                <img id="image03" src="./assets/image/portfolio/gallery/03.png" width="auto" height="auto" alt="Image">
             </div>
             <div class="gallery-image">
-                <img src="./assets/image/portfolio/gallery/04.png" width="auto" height="auto" alt="Image">
+                <img id="image04" src="./assets/image/portfolio/gallery/04.png" width="auto" height="auto" alt="Image">
             </div>
             <div class="gallery-image">
-                <img src="./assets/image/portfolio/gallery/05.png" width="auto" height="auto" alt="Image">
+                <img id="image05" src="./assets/image/portfolio/gallery/05.png" width="auto" height="auto" alt="Image">
             </div>
             <div class="gallery-image">
-                <img src="./assets/image/portfolio/gallery/06.png" width="auto" height="auto" alt="Image">
+                <img id="image06" src="./assets/image/portfolio/gallery/06.png" width="auto" height="auto" alt="Image">
             </div>
             <div class="gallery-image">
-                <img src="./assets/image/portfolio/gallery/07.png" width="auto" height="auto" alt="Image">
+                <img id="image07" src="./assets/image/portfolio/gallery/07.png" width="auto" height="auto" alt="Image">
             </div>
             <div class="gallery-image">
-                <img src="./assets/image/portfolio/gallery/08.png" width="auto" height="auto" alt="Image">
+                <img id="image08" src="./assets/image/portfolio/gallery/08.png" width="auto" height="auto" alt="Image">
             </div>
             <div class="gallery-image">
-                <img src="./assets/image/portfolio/gallery/09.png" width="auto" height="auto" alt="Image">
+                <img id="image09" src="./assets/image/portfolio/gallery/09.png" width="auto" height="auto" alt="Image">
             </div>
             <div class="gallery-image">
-                <img src="./assets/image/portfolio/gallery/10.png" width="auto" height="auto" alt="Image">
+                <img id="image10" src="./assets/image/portfolio/gallery/10.png" width="auto" height="auto" alt="Image">
             </div>
             <div class="gallery-image">
-                <img src="./assets/image/portfolio/gallery/11.png" width="auto" height="auto" alt="Image">
+                <img id="image11" src="./assets/image/portfolio/gallery/11.png" width="auto" height="auto" alt="Image">
             </div>
             <div class="gallery-image">
-                <img src="./assets/image/portfolio/gallery/12.png" width="auto" height="auto" alt="Image">
+                <img id="image12" src="./assets/image/portfolio/gallery/12.png" width="auto" height="auto" alt="Image">
             </div>
         </div>
     </section>
