fix: adjust margins

--- a/singolo2.html
+++ b/singolo2.html
@@ -73,8 +73,10 @@
         </div>
         <div class="layout-3-columns">
             <div class="about-us-info">
-                <img class="portrait" id="adam-jensen" src="./assets/image/portfolio/about-us/adam-jensen.png"
-                    width="auto" height="auto" alt="Adam Jensen">
+                <div class="portrait" id="adam-jensen">
+                    <img src="./assets/image/portfolio/about-us/adam-jensen.png" width="auto" height="auto"
+                        alt="Adam Jensen">
+                </div>
                 <h3 class="info-name">adam jensen</h3>
                 <p class="info-text">Quisque luctus, quam eget molestie commodo, lacus purus cursus
                     purus, nec rutrum tellus dolor id lorem.</p>
@@ -106,16 +108,18 @@
                 </div>
             </div>
             <div class="about-us-info" id="desmond-miles">
-                <img class="portrait" src="./assets/image/portfolio/about-us/desmond-miles.png" width="auto"
-                    height="auto" alt="Desmond Miles">
+                <div class="portrait">
+                    <img src="./assets/image/portfolio/about-us/desmond-miles.png" width="auto" height="auto"
+                        alt="Desmond Miles">
+                </div>
                 <h3 class="info-name">desmond miles</h3>
                 <p class="info-text">Curabitur vestibulum eget mauris quis laoreet.
                     Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
                 <div class="info-contact">
-                        <button class="button-icon">
-                            <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="14" height="14"
-                                alt="Facebook">
-                        </button>
+                    <button class="button-icon">
+                        <img class="icon" src="./assets/image/portfolio/icon/facebook.svg" width="14" height="14"
+                            alt="Facebook">
+                    </button>
                     <form>
                         <button class="button-icon">
                             <img class="icon" src="./assets/image/portfolio/icon/google.svg" width="14" height="14"
@@ -137,8 +141,10 @@
                 </div>
             </div>
             <div class="about-us-info">
-                <img class="portrait" id="scolara-visari" src="./assets/image/portfolio/about-us/scolara-visari.png"
-                    width="auto" height="auto" alt="Scolara Visari">
+                <div class="portrait" id="scolara-visari">
+                    <img src="./assets/image/portfolio/about-us/scolara-visari.png" width="auto" height="auto"
+                        alt="Scolara Visari">
+                </div>
                 <h3 class="info-name">scolara visari</h3>
                 <p class="info-text">Nulla sed nunc et tortor luctus faucibus. Morbi at
                     aliquet turpis, et consequat felis. Quisque condimentum.</p>
