feat: add icons

--- a/singolo3.html
+++ b/singolo3.html
@@ -35,15 +35,21 @@
         </p>
         <div class="contact color-white">
           <div class="contact-data">
-            <img id="location" src="./assets/image/form/location.svg" width="7" height="11" alt="Location">
+            <div class="contact-img">
+              <img id="location" src="./assets/image/form/location.svg" width="7" height="11" alt="Location">
+            </div>
             <p class="contact-text">Elm St. 14/05 Lost City</p>
           </div>
           <div class="contact-data">
-            <img id="phone" src="./assets/image/form/phone.svg" width="11" height="11" alt="Phone">
+            <div class="contact-img">
+              <img id="phone" src="./assets/image/form/phone.svg" width="11" height="11" alt="Phone">
+            </div>
             <p class="contact-text">03528 331 86 35</p>
           </div>
           <div class="contact-data">
-            <img id="mail" src="./assets/image/form/mail.svg" width="13" height="8" alt="Mail">
+            <div class="contact-img">
+              <img id="mail" src="./assets/image/form/mail.svg" width="13" height="8" alt="Mail">
+            </div>
             <p class="contact-text">info@singolo.com</p>
           </div>
         </div>
@@ -51,19 +57,19 @@
     </div>
   </main>
   <footer class="footer">
-    <p class="copiright color-blue">&copy; Copiright 2013</p>
+    <p class="copyright color-blue">&copy; Copyright 2013</p>
     <div class="footer-icons color-blue">
       <div class="footer-icon">
-        <img id="facebook">
+        <img id="facebook" src="./assets/image/portfolio/icon/facebook.svg" width="14" height="14">
       </div>
       <div class="footer-icon">
-        <img id="google">
+        <img id="google" src="./assets/image/portfolio/icon/google.svg" width="14" height="14">
       </div>
       <div class="footer-icon">
-        <img id="twitter">
+        <img id="twitter" src="./assets/image/portfolio/icon/twitter.svg" width="14" height="14">
       </div>
       <div class="footer-icon">
-        <img id="linkedin">
+        <img id="linkedin" src="./assets/image/portfolio/icon/linkedin.svg" width="14" height="14">
       </div>
     </div>
   </footer>
