feat: add submit button

--- a/singolo3.html
+++ b/singolo3.html
@@ -26,6 +26,7 @@
         <input class="input-form" type="text" name="subject" id="subject" placeholder="Subject">
         <textarea class="input-form" name="describe" id="describe"
           placeholder="Describe your project in detail..."></textarea>
+        <input id="submit-button" type="submit" value="Submit">
       </form>
       <div class="contact-info">
         <h2 class="contact-info-head color-white">contact information</h2>
