--- a/singolo3.html
+++ b/singolo3.html
@@ -45,13 +45,13 @@
             <div class="contact-img">
               <img id="phone" src="./assets/image/form/phone.svg" width="11" height="11" alt="Phone">
             </div>
-            <p class="contact-text">03528 331 86 35</p>
+            <a class="contact-text color-white" href="tel:03528 331 86 35">03528 331 86 35</a>
           </div>
           <div class="contact-data">
             <div class="contact-img">
               <img id="mail" src="./assets/image/form/mail.svg" width="13" height="8" alt="Mail">
             </div>
-            <p class="contact-text">info@singolo.com</p>
+            <a class="contact-text color-white" href="mailto:info@singolo.com">info@singolo.com</a>
           </div>
         </div>
       </div>
